src/objects/DMAPP__Deal_Review__c.object
<CustomObject>
    <fields>
        <fullName>DMAPP__Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Completeness__c</fullName>
        <label>Dealmaker Completeness</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Dealmaker_Opportunity__c</fullName>
        <label>Dealmaker Opportunity</label>
        <referenceTo>DMAPP__DM_Opportunity_Extra__c</referenceTo>
        <relationshipLabel>Deal Reviews</relationshipLabel>
        <relationshipName>Deal_Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DMAPP__Defer_Comment__c</fullName>
        <label>Defer Comment</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Defer_Date__c</fullName>
        <label>Defer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Effective_Date__c</fullName>
        <formula>IF( ISNULL( DMAPP__Reschedule_Date__c ) ,  DMAPP__Original_Schedule_Date__c , DMAPP__Reschedule_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Is_Read__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Read</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Age__c</fullName>
        <description>Age of the Saleforce opportunity in days.</description>
        <inlineHelpText>Age of the Saleforce opportunity in days.</inlineHelpText>
        <label>Opportunity Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DMAPP__Opportunity_Stage__c</fullName>
        <label>Opportunity Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMAPP__Original_Schedule_Comment__c</fullName>
        <label>Original Schedule Comment</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Original_Schedule_Date__c</fullName>
        <label>Original Schedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Probability__c</fullName>
        <label>Probability</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DMAPP__Reschedule_Comment__c</fullName>
        <label>Reschedule Comment</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DMAPP__Reschedule_Date__c</fullName>
        <label>Reschedule Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DMAPP__Status__c</fullName>
        <formula>IF( DMAPP__Is_Complete__c , &apos;Completed&apos;, 
IF( DMAPP__Effective_Date__c &lt; BLANKVALUE($Setup.DMAPP__Dealmaker_Core_Settings__c.DMAPP__Mock_Today__c, TODAY()),
&apos;Overdue&apos;,
IF( ISNULL( DMAPP__Reschedule_Date__c )|| ISNULL(DMAPP__Original_Schedule_Date__c) &amp;&amp; NOT(ISNULL(DMAPP__Reschedule_Date__c)), 
&apos;Scheduled&apos;,
IF(DMAPP__Reschedule_Date__c &lt;= DMAPP__Original_Schedule_Date__c,
&apos;Rescheduled&apos;,
&apos;Deferred&apos;
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <label>Deal Review</label>
    <nameField>
        <label>Deal Review Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deal Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>